# -

./: .gitignore  CLAUDE.md  README.md  electron-builder.yml  package-lock.json  package.json
app/: float-btn.html  float-preload.js  index.html  logger.js  main.js  preload.js  renderer.js  store.js  styles.css
dev-logs/: 2026-06-17.md
docs/: design-spec.md  development-plan.md  requirements.md  tech-spec.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  main.rs  tray.rs
